@@ -17212,6 +17212,8 @@ libs/wave/test/testwave/testfiles/t_9_016.cpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/t_9_016.hpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/t_9_017.cpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/t_9_018.cpp svneol=native#text/plain
+libs/wave/test/testwave/testfiles/t_9_019.cpp svneol=native#text/plain
+libs/wave/test/testwave/testfiles/t_9_019.hpp svneol=native#text/plain
 libs/wave/test/testwave/testfiles/test.cfg -text
 libs/wave/test/testwave/testwave.cpp svneol=native#text/plain
 libs/wave/test/testwave/testwave_app.cpp svneol=native#text/plain
